[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mon-package"
version = "0.1.0"
description = "Description courte de votre package"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Votre Nom", email = "votre@email.com"}
]
dependencies = [
    # Listez vos dépendances ici
    httpx,
]

[project.urls]
Homepage = "https://github.com/zecloud/azureopenaigptimageclient"