[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azureopenaigptimageclient"
version = "0.1.0"
description = "An async python client for Azure Open AI gpt-image 1 client and for Azure AI Foundry SORA"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "zecloud", email = "votre@email.com"}
]
dependencies = [
    "httpx>=0.23.0"
]

[project.urls]
Homepage = "https://github.com/zecloud/azureopenaigptimageclient"

[tool.setuptools]
packages = ["FoundryImageClient"]
